fixed sign in and sign up still cant solve background color contrast

--- a/reactapp/src/css/sign_up.css
+++ b/reactapp/src/css/sign_up.css
@@ -16,6 +16,10 @@ body {
   margin-bottom: auto;
 }
 
+#h3 {
+  font-size: 1.75rem; 
+}
+
 .card-header {
   color: #3c240f;
 }
